Revert "Move rants to post"
This reverts commit 07d640d47c540f2a24d8e69ef5db2cfa27035879.

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -65,6 +65,7 @@ disableInlineCSS = true
 
 [permalinks]
 post = '/post/:year/:month/:day/:filename/'
+rants = '/post/:year/:month/:day/:filename/'
 
 [[module.imports]]
 path = "cj.rs/gohugo-asciinema"
