config: Update rss baseurl
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -28,6 +28,10 @@ minifyOutput = true
 home = ["HTML", "RSS", "JSON"]
 section = ['HTML', 'RSS']
 
+[outputFormats.RSS]
+mediatype = 'application/rss+xml'
+baseName = 'rss'
+
 [taxonomies]
 category = 'categories'
 tag = 'tags'
