Rearrange sections and update mainsections
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -69,7 +69,7 @@ disableInlineCSS = true
 
 [permalinks]
 post = '/post/:year/:month/:day/:filename/'
-rants = '/post/:year/:month/:day/:filename/'
+rant = '/post/:year/:month/:day/:filename/'
 
 [[module.imports]]
 path = "cj.rs/gohugo-asciinema"
