--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "badge-maker": "^3.3.1",
+    "jquery": "^3.6.0",
+    "photoswipe": "^4.1.3",
     "simple-icons": "^7.5.0",
     "svgo": "^2.7.0"
   }
