about: Update matrix id
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -110,7 +110,7 @@ name = 'Telegram'
 url = 'https://t.me/ahmubashshir'
 [[socialIcons]]
 name = 'Matrix'
-url = 'https://matrix.to/#/@ahm:feneas.org'
+url = 'https://matrix.to/#/@ahm:inetd.xyz'
 [[socialIcons]]
 name = 'Discord'
 url = 'https://discord.com/users/600271127411032065'
