--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -23,6 +23,7 @@ jobs:
       uses: peaceiris/actions-hugo@v2
       with:
         hugo-version: latest
+        extended: true
 
     - name: prepare(node)
       uses: actions/setup-node@v3
