Bundle Ackee to speed up build
Signed-off-by: Mubashshir <ahmubashshir@gmail.com>

--- a/config/_default/module.toml
+++ b/config/_default/module.toml
@@ -25,3 +25,7 @@ target = 'assets/npm/jquery'
 [[mounts]]
 source = 'node_modules/photoswipe/dist'
 target = 'assets/npm/photoswipe'
+
+[[mounts]]
+source = 'node_modules/ackee-tracker-consent/dist'
+target = 'assets/npm/ackee-consent'
